--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jasmine-spec-reporter": "^5.0.2",
     "log4js": "^6.3.0",
     "protractor": "^7.0.0",
+    "protractor-cucumber-framework": "^6.2.1",
     "typescript": "^3.9.7"
   }
 }
